--- a/xjx/Image Rotation All.Rmd
+++ b/xjx/Image Rotation All.Rmd
@@ -178,6 +178,9 @@ all_points = map(all_points, as.matrix)
 end3-begin3
 ```
 
+```{r}
+save(all_points, file="../output/all_points.RData")
+```
 
 
 
