--- a/xjx/Image Rotation All.Rmd
+++ b/xjx/Image Rotation All.Rmd
@@ -13,6 +13,12 @@ library(tidyverse)
 ```
 
 ```{r}
+library(tidyverse)
+library(EBImage)
+```
+
+
+```{r}
 single = c(35,36,37,38,44,52,56,59,62)
 double = data.frame(x1 = c(1,2,3,4,5,6,7,8,9,19,20,21,22,23,24,25,26,39,40,41,42,43,50,51,57,58,63),
                     x2 = c(10,15,14,13,12,11,18,17,16,31,30,29,28,27,34,33,32,49,48,47,46,45,54,53,55,60,61))
