--- a/xjx/Image Rotation All_x.Rmd
+++ b/xjx/Image Rotation All_x.Rmd
@@ -26,6 +26,11 @@ load("../output/fiducial_pt_list.Rdata")
 single = c(35,36,37,38,44,52,56,59,62)
 double = data.frame(x1 = c(1,2,3,4,5,6,7,8,9,19,20,21,22,23,24,25,26,39,40,41,42,43,50,51,57,58,63),
                     x2 = c(10,15,14,13,12,11,18,17,16,31,30,29,28,27,34,33,32,49,48,47,46,45,54,53,55,60,61))
+
+emotion_type=info%>%group_by(type,emotion_cat)%>%summarise()
+emotion_list_simple=c('Angry','Disgusted','Fearful','Happy','Neutral','Sad','Surprised')
+emotion_list_compound=c('Angrily disgusted','Angrily surprised','Appalled','Awed','Disgustedly surprised','Fearfully angry','Fearfully disgusted','Fearfully surprised','Happily disgusted','Happily surprised','Hatred','Sadly angry','Sadly disgusted','Sadly fearful','Sadly surprised')
+emotion_list_all=c(emotion_list_simple,emotion_list_compound)
 ```
 
 #这里我加了我的函数&减了一些for循环
@@ -50,7 +55,7 @@ cal_rotation = function(points, angle){
 
 cal_translate = function(points, center_x = 500, center_y = 375){
   newx=points[,1]+center_x-points[37,1]
-  newy=points[,2]+center_x-points[37,2]
+  newy=points[,2]+center_y-points[37,2]
   points_translate=data.frame(x = newx, y = newy)
   
   return(points_translate)
@@ -85,10 +90,7 @@ change_image = function(indices = c(1,2)){
   return(result_move)
 }
 
-emotion_type=info%>%group_by(type,emotion_cat)%>%summarise()
-emotion_list_simple=c('Angry','Disgusted','Fearful','Happy','Neutral','Sad','Surprised')
-emotion_list_compound=c('Angrily disgusted','Angrily surprised','Appalled','Awed','Disgustedly surprised','Fearfully angry','Fearfully disgusted','Fearfully surprised','Happily disgusted','Happily surprised','Hatred','Sadly angry','Sadly disgusted','Sadly fearful','Sadly surprised')
-emotion_list_all=c(emotion_list_simple,emotion_list_compound)
+
 
 
 display_emotion=function(emotion){
@@ -103,8 +105,13 @@ display_emotion=function(emotion){
   }
   
   display(Image(Image_overlap_data,colormode='Color'), method="raster")
+  title(emotion)
 }
 
+```
+
+```{r}
+map(emotion_list_simple,~display_emotion(.x))
 ```
 
 ```{r}
@@ -154,11 +161,10 @@ for(i in 1:2){
 ```{r}
 # Only points no images
 move_points = function(points, center_x = 500, center_y = 375){
-  pos = data.frame(x = points[single,1], y = points[single,2])
-  for(i in 1:nrow(double)){
-    pos = rbind(pos, data.frame(x = (points[double[i,1],1]+points[double[i,2],1])/2, 
-                                y = (points[double[i,1],2]+points[double[i,2],2])/2))
-  }
+  pos_single = data.frame(x = points[single,1], y = points[single,2])
+  pos_double=data.frame(x=0.5*points[double[,1],1]+0.5*points[double[,2],1],
+                        y=0.5*points[double[,1],2]+0.5*points[double[,2],2])
+  pos=rbind(pos_single,pos_double)
   
   angle = cal_angle(pos)
   points_rotation = cal_rotation(points, angle)
